logs/backend.log
2025-04-29 15:10:37,537 - __main__ - INFO - SERPAPI_API_KEY: Present
2025-04-29 15:10:37,537 - __main__ - INFO - Key value: 86c3...f56b
2025-04-29 15:10:37,538 - __main__ - INFO - Starting server on port 8000 with reload=enabled...
2025-04-29 15:10:37,562 - __main__ - INFO - Created default SSL context with certifi certificates
2025-04-29 15:10:37,562 - __main__ - INFO - Created default SSL context for application
INFO:     Will watch for changes in these directories: ['/Users/fatihbayraktar/fashion AI/backend/app']
INFO:     Uvicorn running on http://0.0.0.0:8000 (Press CTRL+C to quit)
WARNING:  --reload-include and --reload-exclude have no effect unless watchfiles is installed.
INFO:     Started reloader process [54795] using StatReload
2025-04-29 15:10:37,637 - __mp_main__ - INFO - SERPAPI_API_KEY: Present
2025-04-29 15:10:37,637 - __mp_main__ - INFO - Key value: 86c3...f56b
2025-04-29 15:10:37,827 - app.core.connection_pool - INFO - Created default SSL context for connection pools
2025-04-29 15:10:37,828 - app.core.monitoring - INFO - Loaded performance metrics from metrics/performance_metrics.json: 20222600 requests recorded
2025-04-29 15:10:37,828 - app.core.monitoring - INFO - Performance monitor initialized with slow threshold=3.0s, critical threshold=10.0s
Process SpawnProcess-1:
Traceback (most recent call last):
  File "/Library/Frameworks/Python.framework/Versions/3.12/lib/python3.12/multiprocessing/process.py", line 314, in _bootstrap
    self.run()
  File "/Library/Frameworks/Python.framework/Versions/3.12/lib/python3.12/multiprocessing/process.py", line 108, in run
    self._target(*self._args, **self._kwargs)
  File "/Users/fatihbayraktar/fashion AI/.venv/lib/python3.12/site-packages/uvicorn/_subprocess.py", line 76, in subprocess_started
    target(sockets=sockets)
  File "/Users/fatihbayraktar/fashion AI/.venv/lib/python3.12/site-packages/uvicorn/server.py", line 61, in run
    return asyncio.run(self.serve(sockets=sockets))
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/Library/Frameworks/Python.framework/Versions/3.12/lib/python3.12/asyncio/runners.py", line 194, in run
    return runner.run(main)
           ^^^^^^^^^^^^^^^^
  File "/Library/Frameworks/Python.framework/Versions/3.12/lib/python3.12/asyncio/runners.py", line 118, in run
    return self._loop.run_until_complete(task)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/Library/Frameworks/Python.framework/Versions/3.12/lib/python3.12/asyncio/base_events.py", line 687, in run_until_complete
    return future.result()
           ^^^^^^^^^^^^^^^
  File "/Users/fatihbayraktar/fashion AI/.venv/lib/python3.12/site-packages/uvicorn/server.py", line 68, in serve
    config.load()
  File "/Users/fatihbayraktar/fashion AI/.venv/lib/python3.12/site-packages/uvicorn/config.py", line 467, in load
    self.loaded_app = import_from_string(self.app)
                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/Users/fatihbayraktar/fashion AI/.venv/lib/python3.12/site-packages/uvicorn/importer.py", line 21, in import_from_string
    module = importlib.import_module(module_str)
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/Library/Frameworks/Python.framework/Versions/3.12/lib/python3.12/importlib/__init__.py", line 90, in import_module
    return _bootstrap._gcd_import(name[level:], package, level)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "<frozen importlib._bootstrap>", line 1387, in _gcd_import
  File "<frozen importlib._bootstrap>", line 1360, in _find_and_load
  File "<frozen importlib._bootstrap>", line 1331, in _find_and_load_unlocked
  File "<frozen importlib._bootstrap>", line 935, in _load_unlocked
  File "<frozen importlib._bootstrap_external>", line 995, in exec_module
  File "<frozen importlib._bootstrap>", line 488, in _call_with_frames_removed
  File "/Users/fatihbayraktar/fashion AI/backend/app/main.py", line 22, in <module>
    from app.routers.outfits import router as outfits_router
  File "/Users/fatihbayraktar/fashion AI/backend/app/routers/outfits.py", line 864
    except Exception as e:
SyntaxError: expected 'except' or 'finally' block
INFO:     Stopping reloader process [54795]
